img navbtn, home & css-Contextmenu,search&str

--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -15,11 +15,11 @@
     }
 }
 @media screen and (max-device-width: 1024px) {
-    #togglenavbtn::before {
-        content: '\2261';
-        font-size: calc(var(--fontsize-refnsearch) * 3);
-        font-weight: 400;
-    }
+    /* #togglenavbtn::before { */
+        /* content: '\2261'; */
+        /* font-size: calc(var(--fontsize-refnsearch) * 3); */
+        /* font-weight: 400; */
+    /* } */
 }
 @media screen and (max-device-width: 912px) {
      :root {
@@ -98,6 +98,22 @@
         min-width: 40px;
         padding: 3px;
     }
+    
+    #context_menu {
+        right: 10px!important;
+        left: 10px!important;
+        width: calc(100% - 25px)!important;
+        min-width: calc(100vw - 25px)!important;
+        max-width: calc(100vw - 25px)!important;
+    }
+    /* ADDED BY PASTOR SAM ELYAH */
+    #searchPreviewWindowFixed, #strongsdefinitionwindow {
+        min-width: calc(100vw - 56px)!important;
+        max-width: calc(100vw - 56px)!important;
+    }
+    #searchPreviewWindowFixed *, #strongsdefinitionwindow * {
+        max-width: calc(100vw - 56px)!important;
+    }
 }
 @media screen and (max-device-width: 300px) {
     #togglenavbtn {
@@ -121,5 +137,18 @@
     }
     #reference {
         font-size: 1em!important;
+    }
+    /* ADDED BY PASTOR SAM ELYAH */
+    #searchPreviewWindowFixed, #strongsdefinitionwindow {
+        min-width: calc(100vw - 56px)!important;
+        max-width: calc(100vw - 56px)!important;
+    }
+    #searchPreviewWindowFixed *, #strongsdefinitionwindow * {
+        max-width: calc(100vw - 56px)!important;
+    }
+}
+@media screen and (max-device-height: 360px) {
+    #context_menu {
+        min-height: 70vh!important;
     }
 }
