--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -5,21 +5,21 @@
     #togglenavbtn {
         min-width: 44.5px;
     }    
-    #togglenavbtn::before {
+    /* #togglenavbtn::before {
         content: '\2261';
         font-size: 75px;
         font-weight: 400;
-    }
+    } */
     #refnav #app_settings > button {
         min-width: 45px;
     }
 }
 @media screen and (max-device-width: 1024px) {
-    /* #togglenavbtn::before { */
-        /* content: '\2261'; */
-        /* font-size: calc(var(--fontsize-refnsearch) * 3); */
-        /* font-weight: 400; */
-    /* } */
+    /* #togglenavbtn::before {
+        content: '\2261';
+        font-size: calc(var(--fontsize-refnsearch) * 3);
+        font-weight: 400;
+    } */
 }
 @media screen and (max-device-width: 912px) {
      :root {
@@ -27,6 +27,9 @@
     }
     #togglenavbtn {
         min-width: 60.5px;
+    }
+    #togglenavbtn::before {
+        font-size: 50px;
     }
     #refnav #app_settings>button {
         font-size: 35.5px;
