--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -90,6 +90,11 @@
     #searchPreviewWindowFixed *, #strongsdefinitionwindow * {
         max-width: calc(100vw - 56px)!important;
     }
+    #refdiv button, #searchdiv button, #togglenavbtn {
+        min-width: calc((var(--fontsize-refnsearch) - 6px) * 2.5);
+        min-height: calc((var(--fontsize-refnsearch) - 6px) * 2);
+        font-size: calc((var(--fontsize-refnsearch) - 6px) * 2);
+    }
     #context_menu {
         right: 10px!important;
         left: 10px!important;
