--- a/bibleApp.css
+++ b/bibleApp.css
@@ -261,7 +261,7 @@ code{position: relative; padding-top: 5px;}
     font-style: italic;
     pointer-events: none;
 }
-#singleverse_compare_menu {
+#singleverse_compare_menu, #titlebarsearchparameters {
     /* float: right; */
     display: flex;
     width: fit-content;
