--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -90,10 +90,10 @@
     #searchPreviewWindowFixed *, #strongsdefinitionwindow * {
         max-width: calc(100vw - 56px)!important;
     }
-    #refdiv button, #searchdiv button, #togglenavbtn {
-        min-width: calc((var(--fontsize-refnsearch) - 6px) * 2.5);
-        min-height: calc((var(--fontsize-refnsearch) - 6px) * 2);
-        font-size: calc((var(--fontsize-refnsearch) - 6px) * 2);
+    #refdiv button, #searchdiv button {
+        min-width: calc((var(--fontsize-refnsearch) - 2px) * 2.5);
+        min-height: calc((var(--fontsize-refnsearch) - 2px) * 2);
+        font-size: calc((var(--fontsize-refnsearch) -2px) * 2);
     }
     #context_menu {
         right: 10px!important;
