--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -91,9 +91,9 @@
         max-width: calc(100vw - 56px)!important;
     }
     #refdiv button, #searchdiv button {
-        min-width: calc((var(--fontsize-refnsearch) - 2px) * 2.5);
-        min-height: calc((var(--fontsize-refnsearch) - 2px) * 2);
-        font-size: calc((var(--fontsize-refnsearch) -2px) * 2);
+        min-width: calc((var(--fontsize-refnsearch) - 6px) * 2.5);
+        min-height: calc((var(--fontsize-refnsearch) - 6px) * 2);
+        font-size: calc((var(--fontsize-refnsearch) - 6px) * 2);
     }
     #context_menu {
         right: 10px!important;
