--- a/bibleApp.css
+++ b/bibleApp.css
@@ -125,7 +125,8 @@ li li li{
     row-gap: 0;
     border-bottom: 5px solid var(--scroll-thumb-hover-bg-color);
 }
-#ppp code, #context_menu:not(.win2) code {
+/* #ppp code, #context_menu:not(.win2) code { */
+#ppp code, #context_menu code {
     font-size: var(--fontsize-ref);
 }
 .chptheading {
@@ -418,21 +419,21 @@ button {
     padding-bottom: 10px;
     padding-right: 10px;
     margin-bottom: 10px;
-    box-shadow: 0px 7.5px 10px 0px var(--scroll-track-bg-color)/* ,
-    -13px -6px 0px 7px var(--scroll-track-bg-color) */;
+    box-shadow: 0px -21.5px 13px 28px var(--scroll-track-bg-color);
     z-index: 3;
 }
-#context_menu .cmtitlebar::before{
+#context_menu .cmtitlebar::before {
     position: absolute;
     content: '';
     left: -9px;
     top: -5px;
-    background: var(--ref-img),linear-gradient(to top, var(--shadow-color3), 5%, transparent);
-    width: 150%;
-    height: 23.5px;
+    width: 120%;
+    height: 115%;
+    background: var(--ref-img);
+    box-shadow: 0px -21px 3px 25px var(--scroll-track-bg-color);
     z-index: -1;
 }
-#context_menu .cmtitlebar::after{
+/* #context_menu .cmtitlebar::after{
     position: absolute;
     content: '';
     left: -10px;
@@ -442,7 +443,7 @@ button {
     width: 110%;
     height: 0px;
     z-index: -1;
-}
+} */
 #context_menu:not(.win2) .cmtitlebar~span{
     font-size:var(--fontsize-scripture);
 }
